// Copyright 2018 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package ash.assistant;

import "header.proto";
import "settings_ui.proto";

// GetSettingsUi.
message GetSettingsUiRequest {
  // Indicates which fields in SettingsUi to fetch.
  // Required.
  optional SettingsUiSelector selector = 4;
}

message GetSettingsUiResponse {
  optional SettingsUi settings = 1;

  optional SettingsResponseHeader header = 2;
}
